objects/ScCollection_LogChild__c.object
<CustomObject>
    <description>this would contain the records and messages corresponding to an event</description>
    <fields>
        <fullName>ScCollection_Exception_Message__c</fullName>
        <description>This field would contain the  messages returned from the system during transaction.</description>
        <label>Exception Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScCollection_Exception_Record_Ids__c</fullName>
        <description>This field would contain the ids of records processed in the transaction with errors.</description>
        <label>Exception Record Ids</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScCollection_Exception_Type__c</fullName>
        <description>This field would contain the type of exception/Log that has been captured.</description>
        <label>Exception Type</label>
        <picklist>
            <picklistValues>
                <fullName>DmlException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ListException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MathException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NullPointerException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QueryException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoAccessException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoDataFoundException</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SObjectException</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_LogMaster__c</fullName>
        <description>This field would hold the log id with it&apos;s process and its status.</description>
        <label>Log Master</label>
        <referenceTo>ScCollection_LogMaster__c</referenceTo>
        <relationshipLabel>Log Child</relationshipLabel>
        <relationshipName>Log_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Log Detail</label>
    <nameField>
        <displayFormat>Log Child - {00000000}</displayFormat>
        <label>Log Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Child</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>